force-app/main/default/objects/Sprint__c/fields/Main_Objective__c.field-meta.xml
<CustomField>
    <fullName>Main_Objective__c</fullName>
    <label>Main Objective</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>