force-app/main/default/objects/Sprint__c/fields/Sprint_Date__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Date__c</fullName>
    <label>Sprint Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>